--- a/style.css
+++ b/style.css
@@ -1,100 +1,3 @@
-* {
-	margin: 0;
-	padding: 0;
-	font-size: 1rem;
-}
-
-body {
-	font-family: sans-serif;
-	font-weight: 100;
-	display: flex;
-	justify-content: center;align-content: center;
-	align-self: center;
-	align-items: center;
-}
-
-.main {
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	max-width: 768px;
-	min-width: 768px;
-}
-
-.recipe-list input {
-	width: 100%;
-	max-width: 50%;
-}
-
-img {
-	width: 100%;
-	max-width: fit-content;
-	align-self: center;
-}
-
-p {
-	padding: 8px;
-}
-
-ul {
-	list-style:disc;
-	padding: 16px;
-}
-
-li {
-	position: relative;
-	font-size: .9rem;
-}
-
-h1,h2,h3 {
-	margin: 8px;
-	font-weight: 500;
-	font-size: 1.5rem;
-}
-
-h1,h2 {
-	font-size: 2rem;
-	font-family: times;
-}
-
-h3 {
-	font-size: 1.2rem;
-}
-
-.content {
-	align-self: center;
-	width: fit-content;
-	text-align: left;
-	background-color: rgb(167, 201, 174);
-	margin: 16px;
-	border-radius: 24px;
-	padding: 1rem;
-}
-.gohome {
-	margin: 16px;
-	align-self: center;
-	padding: 12px;
-	width: fit-content;
-	background-color: rgb(167, 201, 174);
-	border-radius: 100px;
-}
-
-.gohome img {
-	width: 32px;
-}
-
-.other {
-	background-color: rgb(172, 251, 255);
-	margin-top: 64px;
-	padding: 0;
-} 
-
-.obs {
-	color: gray;
-}
-
-@media (max-width: 768px) {
-	.main {
-		min-width: 0;
-	}
+.content-text {
+	background-color: aquamarine;
 }
